make list_item_article layout with rounded corners

--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -16,10 +16,13 @@
 -->
 
 <resources>
-    <color name="photo_placeholder">#ccc</color>
+    <color name="photo_placeholder">#000000</color>
 
     <color name="theme_primary">#04561A</color>
     <color name="theme_primary_dark">#04561A</color>
     <color name="theme_accent">#04561A</color>
     <color name="ltgray">#ffe0e0e0</color>
+    <color name="transparentBlack">#66000000</color><!-- 40% black -->
+    <color name="transparentWhite">#CCFFFFFF</color><!-- 80% white -->
+
 </resources>
