--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -35,7 +35,6 @@
         android:layout_marginBottom="4dp"
         android:ellipsize="end"
         android:maxLines="4"
-        android:text="Title"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/article_subtitle"
@@ -47,12 +46,12 @@
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:ellipsize="end"
-        android:maxLines="2"
-        android:text="Subtitle"
+        android:maxLines="1"
+        android:textSize="14sp"
         android:textColor="@color/transparentWhite"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/thumbnail"
