--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -24,5 +24,6 @@
     <color name="ltgray">#ffe0e0e0</color>
     <color name="transparentBlack">#66000000</color><!-- 40% black -->
     <color name="transparentWhite">#CCFFFFFF</color><!-- 80% white -->
+    <color name="transparentWhiteLighter">#66FFFFFF</color><!-- 40% white -->
 
 </resources>
