--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -25,4 +25,11 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
+    <!--We need to add a dark action bar since it colors the icon black, and that's what we need-->
+    <style name="AppTheme.Toolbar" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:windowActionBarOverlay">true</item>
+        <!-- Support Library compatibility -->
+        <item name="windowActionBarOverlay">true</item>
+    </style>
+
 </resources>
