change main colors to a more vibrant colors

--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,10 +18,12 @@
 <resources>
     <color name="photo_placeholder">#000000</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="theme_primary">#6200EE</color>
+    <color name="theme_primary_dark">#3700B3</color>
+    <color name="theme_accent">#03DAC5</color>
     <color name="ltgray">#ffe0e0e0</color>
+
+
     <color name="transparentBlack">#66000000</color><!-- 40% black -->
     <color name="transparentWhite">#CCFFFFFF</color><!-- 80% white -->
     <color name="transparentWhiteLighter">#66FFFFFF</color><!-- 40% white -->
