--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -8,5 +8,7 @@
     <dimen name="fab_press_translation_z">6dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
     <dimen name="frame_padding">6dp</dimen>
+    <dimen name="grid_item_max_size">160dp</dimen>
+
 
 </resources>
