--- a/XYZReader/src/main/res/drawable/frame.xml
+++ b/XYZReader/src/main/res/drawable/frame.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <corners android:radius="12dp" />
     <stroke
-        android:width="6dp"
+        android:width="@dimen/corner_radius"
         android:color="@android:color/white" />
 </shape>
