add styles for title and body text

--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -34,4 +34,21 @@
         <item name="windowActionBarOverlay">true</item>
     </style>
 
+    <!--Add a text style for body text    -->
+    <style name="BodyText" parent="TextAppearance.AppCompat">
+        <item name="android:textAppearance">@font/roboto_mono_medium</item>
+        <item name="android:textSize">@dimen/detail_body_text_size</item>
+        <item name="android:textColorLink">@color/accentColor</item>
+        <item name="android:letterSpacing">0.1</item>
+        <item name="android:textColor">@color/primary_text</item>
+    </style>
+
+    <!--Add a text style for body text    -->
+    <style name="TitleText" parent="TextAppearance.AppCompat">
+        <item name="android:textAppearance">@font/roboto_mono_bold</item>
+        <item name="android:textSize">@dimen/detail_title_text_size</item>
+        <item name="android:letterSpacing">0.2</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
 </resources>
