--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -11,6 +11,7 @@
         android:layout_height="150dp"
         android:layout_margin="@dimen/frame_padding"
         android:background="@color/photo_placeholder"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/v_frame"
         app:layout_constraintEnd_toEndOf="@+id/v_frame"
         app:layout_constraintStart_toStartOf="@+id/v_frame"
@@ -29,21 +30,19 @@
 
     <TextView
         android:id="@+id/article_title"
-        style="@style/TextAppearance.AppCompat.Title"
+        style="@style/TitleText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:ellipsize="end"
-        android:maxLines="4"
-        android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:maxLines="2"
         app:layout_constraintBottom_toTopOf="@+id/article_subtitle"
         app:layout_constraintEnd_toEndOf="@+id/article_subtitle"
         app:layout_constraintStart_toStartOf="@+id/article_subtitle" />
 
     <TextView
         android:id="@+id/article_subtitle"
-        style="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/BodyText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -51,7 +50,6 @@
         android:layout_marginStart="16dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textSize="14sp"
         android:textColor="@color/transparentWhite"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/thumbnail"
