--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
     <dimen name="detail_image_height">250dp</dimen>
     <dimen name="corner_radius">6dp</dimen>
 
+    <dimen name="grid_item_max_size">250dp</dimen> <!--This is the minimum size of the list item so that the text views are properly viewed-->
+
 </resources>
