--- a/XYZReader/src/main/res/drawable/frame.xml
+++ b/XYZReader/src/main/res/drawable/frame.xml
@@ -4,5 +4,5 @@
     <corners android:radius="12dp" />
     <stroke
         android:width="@dimen/corner_radius"
-        android:color="#EEEEEE" />
+        android:color="@color/borderBackground" />
 </shape>
