--- a/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
@@ -1,6 +1,7 @@
 <com.example.xyzreader.ui.DrawInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/draw_insets_frame_layout"
+    android:background="@color/borderBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -26,19 +27,25 @@
                     android:layout_height="@dimen/detail_image_height"
                     android:scaleType="centerCrop" />
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_gravity="bottom"
+                    android:background="@drawable/photo_background_protection_for_detail" />
+
             </FrameLayout>
 
             <android.support.v7.widget.CardView
                 android:id="@+id/meta_bar"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 app:cardCornerRadius="@dimen/corner_radius"
-                app:layout_constraintBottom_toBottomOf="@+id/photo_container"
+                app:layout_constraintBottom_toTopOf="@+id/article_body"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/photo_container">
+                app:layout_constraintTop_toTopOf="@+id/article_body">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -74,16 +81,19 @@
             <TextView
                 android:id="@+id/article_body"
                 style="@style/BodyText"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="16dp"
+                android:background="@android:color/white"
+                android:padding="100dp"
                 android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
+                android:maxWidth="@dimen/detail_card_max_width"
                 android:paddingBottom="@dimen/detail_body_bottom_margin"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/meta_bar" />
+                app:layout_constraintTop_toBottomOf="@+id/photo_container" />
 
         </android.support.constraint.ConstraintLayout>
 
