--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -23,10 +23,11 @@
     <color name="colorPrimaryDark">#BDBDBD</color>
     <color name="accentColor">#03DAC5</color>
 
-    <color name="transparentBlack">#66000000</color><!-- 40% black -->
     <color name="transparentWhite">#CCFFFFFF</color><!-- 80% white -->
     <color name="transparentWhiteLighter">#66FFFFFF</color><!-- 40% white -->
 
-    <color name="primary_text">#B3000000</color><!-- 70% black -->
+    <color name="primary_text">#B3000000</color>
+    <color name="borderBackground">#EEEEEE</color>
+    <color name="transparentBackground">#CCEEEEEE</color>
 
 </resources>
