--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -28,16 +28,16 @@
 
             </FrameLayout>
 
+            <!--Use app:layout_constrainedWidth="true" so that we can use wrap content and still respect the constraints of the view-->
             <android.support.v7.widget.CardView
                 android:id="@+id/meta_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
                 app:cardCornerRadius="@dimen/corner_radius"
+                app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toBottomOf="@+id/photo_container"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/article_body"
+                app:layout_constraintStart_toStartOf="@+id/article_body"
                 app:layout_constraintTop_toBottomOf="@+id/photo_container">
 
                 <LinearLayout
@@ -47,15 +47,13 @@
                     android:layout_marginBottom="@dimen/detail_metabar_vert_padding"
                     android:orientation="vertical">
 
-
                     <!--Use downloadable fonts-->
                     <TextView
                         android:id="@+id/article_title"
                         style="@style/TitleText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
-                        android:text="fdafadfadfadfadfa" />
+                        android:paddingBottom="@dimen/detail_metabar_title_bottom_padding" />
 
                     <TextView
                         android:id="@+id/article_byline"
