--- a/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
@@ -76,11 +76,12 @@
             </android.support.v7.widget.CardView>
 
             <!--Use letter spacing of .25 according to the Material Design guidelines-->
+            <!--We need to set the IncrementalTextView height as wrap_content so that when we increment the text it updates properly-->
             <com.example.xyzreader.ui.IncrementalTextView
                 android:id="@+id/article_body"
                 style="@style/BodyText"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@android:color/white"
                 android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                 android:maxWidth="@dimen/detail_card_max_width"
