--- a/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
@@ -92,7 +92,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/photo_container" />
+                app:layout_constraintTop_toBottomOf="@+id/photo_container"
+                app:suffix="@string/view_more" />
 
         </android.support.constraint.ConstraintLayout>
 
