--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -83,7 +83,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/meta_bar" />
+                app:layout_constraintTop_toBottomOf="@+id/meta_bar"
+                app:suffix="@string/view_more" />
 
         </android.support.constraint.ConstraintLayout>
 
