--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -23,7 +23,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@color/transparentWhiteLighter"
+        android:background="@color/colorPrimary"
         app:theme="@style/AppTheme.Toolbar">
 
         <!--TODO logo should not be white-->
